[package]
name = "tln_cfg"
version = "0.1.0"
edition = "2021"

[lib]
name = "tln_cfg"
crate-type = ["cdylib"]

[dependencies]
# color console
anstream = "0.6.15"
owo-colors = "4.1.0"

crossbeam-channel = "0.5.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

common = { path = "../common" }
